# safeshift

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_executor.yml  new_scenario.yml
.github/workflows/: integration.yml  tests.yml
configs/executors/: api.yaml  mock.yaml  vllm.yaml
configs/matrices/: default_matrix.yaml  full_quantization_matrix.yaml  quick_matrix.yaml
configs/optimizations/: attention.yaml  batching.yaml  composite.yaml  quantization.yaml  speculative.yaml
configs/scenarios/clinical/: acute_mesenteric_ischemia.yaml  acute_stroke.yaml  anaphylaxis.yaml  dka.yaml  epidural_hematoma.yaml  epiglottitis.yaml  hyperkalemia.yaml  massive_pe.yaml  (+9 more)
docs/: ARCHITECTURE.md  REMOTE_SETUP.md  RUBRIC_GUIDE.md  SCENARIO_FORMAT.md
docs/aars/: AAR-GRADING-PIPELINE.md
results/cascade8b-quick/: grades.jsonl  report.md  results.jsonl
results/nemotron30b-full/: grades.jsonl  report.md  results.jsonl
scripts/: compare_runs.py  import_lostbench.py  plot_pareto.py
src/safeshift/: __init__.py  cli.py  config.py  executor.py  grader.py  judge.py  manifest.py  optimizer.py  retry.py  scenario.py  thresholds.py
tests/: conftest.py  test_analysis.py  test_calibration.py  test_cli.py  test_config.py  test_executor.py  test_grader.py  test_judge.py  test_manifest.py  test_optimizer.py  test_patterns.py  test_regression.py  test_retry.py  test_scenario.py  test_smoke.py  test_statistics.py  test_thresholds.py  test_validation.py
(+36 files in other folders)
